<resources>
    <string name="app_name">REF_Client</string>
    <string name="camera">카메라</string>
    <string name="list">리스트</string>
    <string name="ai">AI</string>
    <string name="mypage">마이페이지</string>
    <string name="cameramain">카메라메인화면</string>
    <string name="listmain">리스트메인화면</string>
    <string name="mypagemain">마이페이지메인화면</string>
    <string name="recommendpagemain">추천메인화면</string>
    <string name="edit">정보수정하기</string>
    <string name="camerawork">카메라동작,,찍고다음화면으로넘어가는거</string>
    <string name="photo_description">사진</string>
    <string name="back">Back</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm">알람 설정</string>
    <string name="changeinfo">회원 정보 수정</string>
    <string name="howtouse">사용 방법</string>
    <string name="qna">자주 묻는 질문</string>
    <string name="shareapp">앱 공유하기</string>
    <string name="sendopinion">의견 보내기</string>
    <string name="support">후원하기</string>
</resources>