<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_app_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/mypageLayout"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        tools:ignore="UselessParent">

        <!-- 텍스트뷰를 중앙 상단에 배치 -->
        <TextView
            android:id="@+id/mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/mypage"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/yourREF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mypageLayout"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/basicProfile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/mypage"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="40dp" >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="사용자 이름의 REF!"
            android:layout_toRightOf="@id/basicProfile"
            android:layout_marginLeft="35dp"
            android:textSize="25sp"
            android:textStyle="bold">
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/changeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourREF"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/changeInfoTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/changeinfo"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/btnGo1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/go_icon"
            android:background="@null"
            android:layout_marginEnd="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/howToUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/changeInfo"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/howToUseTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/howtouse"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/btnGo2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/go_icon"
            android:background="@null"
            android:layout_marginEnd="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/QNA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/howToUse"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/QNATxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/qna"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/btnGo3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/go_icon"
            android:background="@null"
            android:layout_marginEnd="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/shareApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/QNA"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/shareAppTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="앱 공유하기"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/btnGo4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/go_icon"
            android:background="@null"
            android:layout_marginEnd="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sendOpinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/shareApp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/sendOpinionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sendopinion"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/btnGo5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/go_icon"
            android:background="@null"
            android:layout_marginEnd="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendOpinion"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/supportTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/support"
            android:layout_marginLeft="40dp"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <ImageButton
            android:id="@+id/btnGo6"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/go_icon"
            android:background="@null"
            android:layout_marginEnd="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"/>
    </RelativeLayout>

</RelativeLayout>